# slink

./: README.md  setup.cfg
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/slink/: examples.html  seed_functions.html  sequences.html  util.html
docs/_modules/slink/examples/: mk_timestamped_data.html
docs/_sources/: index.rst.txt  table_of_contents.rst.txt
docs/_sources/module_docs/slink/: examples.rst.txt  util.rst.txt
docs/_sources/module_docs/slink/tests/: test_sequences.rst.txt
docs/module_docs/: slink.html
docs/module_docs/slink/: examples.html  seed_functions.html  sequences.html  tests.html  util.html
docs/module_docs/slink/examples/: mk_timestamped_data.html
docs/module_docs/slink/tests/: test_sequences.html
docsrc/: index.rst  table_of_contents.rst
docsrc/module_docs/: slink.rst
docsrc/module_docs/slink/: seed_functions.rst  sequences.rst  tests.rst
docsrc/module_docs/slink/examples/: mk_timestamped_data.rst
misc/: S-855-3 synthetic data for forged with slink.ipynb  design_notes.md  slink - Generating sequences.ipynb
slink/: __init__.py  seed_functions.py  sequences.py  util.py
slink/examples/: __init__.py  mk_timestamped_data.py
tests/: test_sequences.py
