[metadata]
name = slink
version = 0.1.6
url = https://github.com/i2mint/slink
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
description = Generate sequences
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = slink

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    lined
    numpy
    creek
    i2